--- a/mail-service-backend/src/main/resources/application.properties
+++ b/mail-service-backend/src/main/resources/application.properties
@@ -1,10 +1,24 @@
 spring.application.name=mail
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+##JPA properties
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.url=jdbc:postgresql://node128.codingbc.com:7878/cellosign_mailing
+
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+
+spring.datasource.password=Nov2017890#
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#JPA properties
 spring.jpa.show-sql = true
+
 spring.jpa.hibernate.ddl-auto = update
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
